# dna-data

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  commit_message.md  docker-compose.yml  main.py  pyproject.toml
domain/recommendation/: recommendation_crud.py  recommendation_router.py  recommendation_schema.py
fastapi/: main.py
migrations/: README  env.py
migrations/versions/: 07e4900de360_.py  0b610706a70a_.py  0d70ddbcd808_change_billrecommendation_table_to_.py  15bd9cc68f89_.py  1c0fe475349c_contents_table_add_column.py  23e51e38d7f6_.py  25aceb410540_comments_table.py  29645b67b437_like_type.py  300072a4706a_grammar_fix.py  4a993fa9a76e_likes_table.py  52cca6abdc27_new_contents_table.py  5324e50d3b09_.py  59e5ee7ad2c5_add_postal_code_and_address_detail.py  5d32e4f1b75a_add_title_for_content.py  656b41a11374_.py  69c25957eb9e_add_english_columns.py  71fe1ab14751_change_bills_schema.py  7eac939fa813_comments_like_table.py  99d52c215ca1_add_userpagevisit_table.py  a6757cabcd99_add_usercontentmetric.py  ab5543ff8246_change_bill_no_to_bill_id.py  bfbe2b49ae8a_change_bill_no_to_bill_id.py  c3506f0b9f9e_fix_grammar_error.py  ca8a65ff8839_.py  ce0a18091c68_add_billssimilarity_table.py  ce8321c28e35_.py  f7be526e38ad_add_datechecker.py  (+2 more)
src/: DB_manager.py  database.py  db_handler.py  dna_logger.py  extractors.py  load.py  models.py  summary.py
tests/: bill_models.py  conf_models.py  db_handler_test.py  sqlalchemy_test.py  test_example.py  test_summary.py
utils/: extract_all.py  save_bills_from_url.py
(+17 files in other folders)
